[package]
name = "llmblast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "llmblast"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
pyo3 = { version = "0.24.0", features = ["anyhow"] }
reqwest = { version = "0.12.15", features = ["json", "native-tls-vendored"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-test = "0.4.4"
